--- a/index.html
+++ b/index.html
@@ -170,43 +170,51 @@
                 <div class="mainpage__container__logodiv"><img class="mainpage__container__logo"
                         src="./assets/images/mainpage/logo.png" alt="логотип"></div>
                 <p class="mainpage__container__text1">Hello! You got into Harry Potter Wiki!</p>
-                    <p class="mainpage__container__text2">Here you can find information about your favorite heroes and
-                        spells of the Harry Potter universe</p>
-                        <div class="mainpage__container2">
+                <p class="mainpage__container__text2">Here you can find information about your favorite heroes and
+                    spells of the Harry Potter universe</p>
+                <div class="mainpage__container2">
                     <div class="mainpage__container__search">
                         <input type="text" class="mainpage__container__input" placeholder="Name of character" id="hero">
                     </div>
                     <button class="mainpage__container__button button_fontsize button__shine"
-                    onclick="heroSearch()">Search</button></div>
-                
+                        onclick="heroSearch()">Search</button>
+                </div>
+
             </div>
         </article>
         <!--Heroes Gallery-->
-
-
         <!--Wrapper-->
         <div class="wrapper heroesBox">
-            <h2 class="title_size padding">HEROES</h2>
+            <h2 class="title_size padding">MAIN HEROES</h2>
             <div class="slider ">
-                <div class="slider__item" data-tooltip="Harry Potter"><img src="./assets/images/mainpage/harry.svg"
-                        class="imgHover" alt="Harry">
+                <div class="slider__item" data-tooltip="Harry Potter"><img
+                        src="./assets/images/mainpage/HarryPotter.png" class="imgHover" alt="Harry">
 
                 </div>
-                <div class="slider__item" data-tooltip="Lord Voldemort"><img src="./assets/images/mainpage/lord.svg"
-                        class="imgHover" alt="Lord">
+                <div class="slider__item" data-tooltip="Lord Voldemort"><img
+                        src="./assets/images/mainpage/Voldemort.png" class="imgHover" alt="Lord">
 
                 </div>
-                <div class="slider__item" data-tooltip="Hermione"><img src="./assets/images/mainpage/hermione.svg"
-                        class="imgHover" alt="Hermione">
+                <div class="slider__item" data-tooltip="Hermione ranger"><img
+                        src="./assets/images/mainpage/HermioneGranger.png" class="imgHover" alt="Hermione">
 
                 </div>
-                <div class="slider__item" data-tooltip="Lord Voldemort"><img src="./assets/images/mainpage/lord.svg"
-                        class="imgHover" alt="Lord">
+                <div class="slider__item" data-tooltip="Ron Weasley"><img src="./assets/images/mainpage/RonWeasley.png"
+                        class="imgHover" alt="Ron">
 
                 </div>
-                <div class="slider__item" data-tooltip="Lord Voldemort"><img src="./assets/images/mainpage/lord.svg"
-                        class="imgHover" alt="Lord">
+                <div class="slider__item" data-tooltip="Albus Dumbledore"><img
+                        src="./assets/images/mainpage/AlbusDumbledore.png" class="imgHover" alt="Albus">
+                </div>
 
+                <div class="slider__item" data-tooltip="Rubeus Hagrid"><img
+                        src="./assets/images/mainpage/RubeusHagrid.png" class="imgHover" alt="Hagrid">
+                </div>
+                <div class="slider__item" data-tooltip="Severus Snape"><img
+                        src="./assets/images/mainpage/SeverusSnape.png" class="imgHover" alt="Snape">
+                </div>
+                <div class="slider__item" data-tooltip="Draco Malfoy"><img
+                        src="./assets/images/mainpage/DracoMalfoy.jpg" class="imgHover" alt="Malfoy">
                 </div>
             </div>
         </div>
