--- a/index.html
+++ b/index.html
@@ -189,33 +189,33 @@
             <h2 class="title_size padding">MAIN HEROES</h2>
 
             <div class="slider ">
-                <div class="slider__item" data-tooltip="Harry Potter"><img
+                <div class="slider__item harry" data-tooltip="Harry Potter"><img
                         src="./assets/images/mainpage/HarryPotter.png" class="imgHover" alt="Harry">
 
                 </div>
-                <div class="slider__item" data-tooltip="Lord Voldemort"><img
+                <div class="slider__item lord" data-tooltip="Lord Voldemort"><img
                         src="./assets/images/mainpage/Voldemort.png" class="imgHover" alt="Lord">
 
                 </div>
-                <div class="slider__item" data-tooltip="Hermione ranger"><img
+                <div class="slider__item hermione" data-tooltip="Hermione Granger"><img
                         src="./assets/images/mainpage/HermioneGranger.png" class="imgHover" alt="Hermione">
 
                 </div>
-                <div class="slider__item" data-tooltip="Ron Weasley"><img src="./assets/images/mainpage/RonWeasley.png"
-                        class="imgHover" alt="Ron">
+                <div class="slider__item ron" data-tooltip="Ron Weasley"><img
+                        src="./assets/images/mainpage/RonWeasley.png" class="imgHover" alt="Ron">
 
                 </div>
-                <div class="slider__item" data-tooltip="Albus Dumbledore"><img
+                <div class="slider__item albus" data-tooltip="Albus Dumbledore"><img
                         src="./assets/images/mainpage/AlbusDumbledore.png" class="imgHover" alt="Albus">
                 </div>
 
-                <div class="slider__item" data-tooltip="Rubeus Hagrid"><img
+                <div class="slider__item rubeus" data-tooltip="Rubeus Hagrid"><img
                         src="./assets/images/mainpage/RubeusHagrid.png" class="imgHover" alt="Hagrid">
                 </div>
-                <div class="slider__item" data-tooltip="Severus Snape"><img
+                <div class="slider__item snape" data-tooltip="Severus Snape"><img
                         src="./assets/images/mainpage/SeverusSnape.png" class="imgHover" alt="Snape">
                 </div>
-                <div class="slider__item" data-tooltip="Draco Malfoy"><img
+                <div class="slider__item draco" data-tooltip="Draco Malfoy"><img
                         src="./assets/images/mainpage/DracoMalfoy.jpg" class="imgHover" alt="Malfoy">
                 </div>
             </div>
