--- a/index.html
+++ b/index.html
@@ -135,17 +135,11 @@
             color: white;
             font-weight: 400;
         }
-
-        #block {
-            background: red;
-            width: 100px;
-            height: 100px;
-            display: none;
-        }
     </style>
 </head>
 
 <body>
+    <!--Header-->
     <header class="header">
         <div class="header__container">
             <div class="header__logo">
@@ -164,6 +158,7 @@
             </div>
         </div>
     </header>
+    <!--Main-->
     <main class="main">
         <article class="mainpage">
             <div class="mainpage__container">
