--- a/index.html
+++ b/index.html
@@ -301,9 +301,6 @@
         }
 
         /* форма авторизации и регистрации */
-
-
-        >>>>>>>f68266ada964efb38d6fdaf657d553934458d3c8
     </style>
 </head>
 
@@ -388,8 +385,8 @@
 
         <!--Spells Gallery-->
         <article class="spellsGallery">
-            <wrapper class="spellsGallery_wrapper  ">
-                <h2 class="title_size padding">SPELLS</h2>
+            <wrapper class="spellsGallery_wrapper">
+                <h2 class="title_size">SPELLS</h2>
                 <div class="spellsGallery_wrapper_cards ">
                     <div class="spells_icon_left">
                         <img src="./assets/images/mainpage/arrayRight.svg" class="spells_icon_left_pic  ">
