--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <button class="mainpage__container__button button_fontsize button__shine"
                         onclick="heroSearch()">Search</button>
                 </div>
+                <p class="mainpage__container__text3">P.S Please enter the character's First and Last Name!</p>
 
             </div>
         </article>
@@ -151,7 +152,7 @@
                                     placeholder="Comment:">
                             </div>
                         </form>
-                        <button type="submit" class="comments__button button__shine">Add comment</button>
+                        <button type="submit" class="comments__button button__shine button_fontsize">Add comment</button>
                     </div>
                     <div class="comments__result">
                         <div class="comments__result-item">
