--- a/index.html
+++ b/index.html
@@ -97,32 +97,32 @@
             <h2 class="title_size padding">SPELLS</h2>
             <wrapper class="spellsGallery_wrapper wrapper ">
                 <div class="slider_spells slider_margin ">
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Aberto</p>
+                    <div class="slider__item slider__itemSpell">
+                        <p class="galleryText_size border">Aberto</p>
                     </div>
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Accio</p>
+                    <div class="slider__item  slider__itemSpell">
+                        <p class="galleryText_size border ">Accio</p>
                     </div>
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Aquamenti</p>
+                    <div class="slider__item  slider__itemSpell">
+                        <p class="galleryText_size border">Aquamenti</p>
                     </div>
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Первое</p>
+                    <div class="slider__item  slider__itemSpell">
+                        <p class="galleryText_size border">Первое</p>
                     </div>
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Первое</p>
+                    <div class="slider__item slider__itemSpell">
+                        <p class="galleryText_size border">Первое</p>
                     </div>
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Первое</p>
+                    <div class="slider__item slider__itemSpell">
+                        <p class="galleryText_size border">Первое</p>
                     </div>
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Первое</p>
+                    <div class="slider__item slider__itemSpell">
+                        <p class="galleryText_size border">Первое</p>
                     </div>
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Первое</p>
+                    <div class="slider__item  slider__itemSpell">
+                        <p class="galleryText_size border">Первое</p>
                     </div>
-                    <div class="slider__item  galleryText_size slider__itemSpell">
-                        <p>Первое</p>
+                    <div class="slider__item  slider__itemSpell">
+                        <p class="galleryText_size border">Первое</p>
                     </div>
                 </div>
                 </div>
