поправила верстку комментов

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <!--Comments -->
         <article class="comments">
             <div class="commentsBox">
-                <h2 class="title_size commentsBox__title padding">COMMENTS</h2>
+                <h2 class="title_size commentsBox__title">COMMENTS</h2>
                 <div class="comments__block">
                     <div class="comments__form">
                         <form>
