--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
                 <div class="loginBlock">
                     <label for="userLogin" class="loginLabel">Login</label>
-                    <input type="text" id="userLogin" class="login" required pattern="[a-zA-Z0-9]+$"/>
+                    <input type="text" id="userLogin" class="login" required pattern="[a-zA-Z0-9]+$" minlength="5"/>
                 </div>
 
                 <div class="emailBlock">
