--- a/index.html
+++ b/index.html
@@ -257,8 +257,9 @@
                                 <input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:">
                             </div>
                         </form>
-                        <button type="submit" class="comments__button button__shine">Add comment</button>
+                        <button type="submit" class="comments__button button__shine" id="comment-add">Add comment</button>
                     </div>
+                    <div id="comment-field"></div>
                     <div class="comments__result">
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
