плавный скролл до блоков на странице

--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     <script src="./assets/scripts/comments.js"></script>
     <script src="./assets/scripts/slaiderSpells.js"></script>
     <script src="./assets/scripts/validationReg.js"></script>
+    <script src="./assets/scripts/scroll.js"></script>
 </body>
 
 </html>
