--- a/index.html
+++ b/index.html
@@ -259,31 +259,26 @@
                         </form>
                         <button type="submit" class="comments__button button__shine" id="comment-add">Add comment</button>
                     </div>
-                    <div id="comment-field"></div>
-                    <div class="comments__result">
+                    <div id="comment-field">
                         <div class="comments__result-item">
-                            <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
-                            <p class="comments__name">Катя:</p>
-                            <p class="comments__content">Крутой сайт!</p>
-                            <p class="comments__time">06.01.2023</p>
+                            <p class="comments__name"></p>
+                            <p class="comments__content"></p>
+                            <p class="comments__time"></p>
                         </div>
                         <div class="comments__result-item">
-                            <img class="comments__photo" src="./assets/images/mainpage/mini_photo.svg" alt="photo">
-                            <p class="comments__name">Катя:</p>
-                            <p class="comments__content">Крутой сайт!</p>
-                            <p class="comments__time">06.01.2023</p>
+                            <p class="comments__name"></p>
+                            <p class="comments__content"></p>
+                            <p class="comments__time"></p>
                         </div>
                         <div class="comments__result-item">
-                            <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
-                            <p class="comments__name">Катя:</p>
-                            <p class="comments__content">Крутой сайт!</p>
-                            <p class="comments__time">06.01.2023</p>
+                            <p class="comments__name"></p>
+                            <p class="comments__content"></p>
+                            <p class="comments__time"></p>
                         </div>
                         <div class="comments__result-item">
-                            <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
-                            <p class="comments__name">Катя:</p>
-                            <p class="comments__content">Крутой сайт!</p>
-                            <p class="comments__time">06.01.2023</p>
+                            <p class="comments__name"></p>
+                            <p class="comments__content"></p>
+                            <p class="comments__time"></p>
                         </div>
                     </div>
                 </div>
