--- a/index.html
+++ b/index.html
@@ -133,29 +133,29 @@
                                 <input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:">
                             </div>
                         </form>
-                        <button type="submit" class="comments__button button__shine button_fontsize">Add comment</button>
+                        <button type="submit" class="comments__button button__shine button_fontsize" id="comment-add">Add comment</button>
                     </div>
-                    <div id="comment-field">
-                        <div class="comments__result-item">
-                            <p class="comments__name"></p>
-                            <p class="comments__content"></p>
-                            <p class="comments__time"></p>
-                        </div>
-                        <div class="comments__result-item">
-                            <p class="comments__name"></p>
-                            <p class="comments__content"></p>
-                            <p class="comments__time"></p>
-                        </div>
-                        <div class="comments__result-item">
-                            <p class="comments__name"></p>
-                            <p class="comments__content"></p>
-                            <p class="comments__time"></p>
-                        </div>
-                        <div class="comments__result-item">
-                            <p class="comments__name"></p>
-                            <p class="comments__content"></p>
-                            <p class="comments__time"></p>
-                        </div>
+                </div>
+                <div>
+                    <div class="comments__result-item" id="comment-field">
+                        <p class="comments__name"></p>
+                        <p class="comments__content"></p>
+                        <p class="comments__time"></p>
+                    </div>
+                    <div class="comments__result-item">
+                        <p class="comments__name"></p>
+                        <p class="comments__content"></p>
+                        <p class="comments__time"></p>
+                    </div>
+                    <div class="comments__result-item">
+                        <p class="comments__name"></p>
+                        <p class="comments__content"></p>
+                        <p class="comments__time"></p>
+                    </div>
+                    <div class="comments__result-item">
+                        <p class="comments__name"></p>
+                        <p class="comments__content"></p>
+                        <p class="comments__time"></p>
                     </div>
                 </div>
             </div>
