--- a/index.html
+++ b/index.html
@@ -135,27 +135,27 @@
                         </form>
                         <button type="submit" class="comments__button button__shine button_fontsize" id="comment-add">Add comment</button>
                     </div>
-                </div>
-                <div>
-                    <div class="comments__result-item" id="comment-field">
-                        <p class="comments__name"></p>
-                        <p class="comments__content"></p>
-                        <p class="comments__time"></p>
-                    </div>
-                    <div class="comments__result-item">
-                        <p class="comments__name"></p>
-                        <p class="comments__content"></p>
-                        <p class="comments__time"></p>
-                    </div>
-                    <div class="comments__result-item">
-                        <p class="comments__name"></p>
-                        <p class="comments__content"></p>
-                        <p class="comments__time"></p>
-                    </div>
-                    <div class="comments__result-item">
-                        <p class="comments__name"></p>
-                        <p class="comments__content"></p>
-                        <p class="comments__time"></p>
+                    <div class="comments__result">
+                        <div class="comments__result-item" id="comment-field">
+                            <p class="comments__name"></p>
+                            <p class="comments__content"></p>
+                            <p class="comments__time"></p>
+                        </div>
+                        <div class="comments__result-item">
+                            <p class="comments__name"></p>
+                            <p class="comments__content"></p>
+                            <p class="comments__time"></p>
+                        </div>
+                        <div class="comments__result-item">
+                            <p class="comments__name"></p>
+                            <p class="comments__content"></p>
+                            <p class="comments__time"></p>
+                        </div>
+                        <div class="comments__result-item">
+                            <p class="comments__name"></p>
+                            <p class="comments__content"></p>
+                            <p class="comments__time"></p>
+                        </div>
                     </div>
                 </div>
             </div>
