--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <script src="./assets/scripts/modal.js"></script>
+    <script src="./assets/scripts/modal2.js"></script>
     <title>Document</title>
 
 </head>
@@ -97,33 +98,33 @@
         <article class="spellsGallery">
             <h2 class="title_size padding">SPELLS</h2>
             <wrapper class="spellsGallery_wrapper wrapper ">
-                <div class="slider_spells slider_margin ">
+                <div class="slider_spells slider_margin api_spells">
                     <div class="slider__item slider__itemSpell">
-                        <p class="galleryText_size border">Aberto</p>
+                        <p class="galleryText_size ">Aberto</p>
                     </div>
                     <div class="slider__item  slider__itemSpell">
-                        <p class="galleryText_size border ">Accio</p>
+                        <p class="galleryText_size ">Accio</p>
                     </div>
                     <div class="slider__item  slider__itemSpell">
-                        <p class="galleryText_size border">Aquamenti</p>
+                        <p class="galleryText_size ">Aquamenti</p>
                     </div>
                     <div class="slider__item  slider__itemSpell">
-                        <p class="galleryText_size border">Первое</p>
-                    </div>
-                    <div class="slider__item slider__itemSpell">
-                        <p class="galleryText_size border">Первое</p>
+                        <p class="galleryText_size ">Первое</p>
                     </div>
                     <div class="slider__item slider__itemSpell">
-                        <p class="galleryText_size border">Первое</p>
+                        <p class="galleryText_size ">Первое</p>
                     </div>
                     <div class="slider__item slider__itemSpell">
-                        <p class="galleryText_size border">Первое</p>
+                        <p class="galleryText_size ">Первое</p>
+                    </div>
+                    <div class="slider__item slider__itemSpell">
+                        <p class="galleryText_size ">Первое</p>
                     </div>
                     <div class="slider__item  slider__itemSpell">
-                        <p class="galleryText_size border">Первое</p>
+                        <p class="galleryText_size ">Первое</p>
                     </div>
                     <div class="slider__item  slider__itemSpell">
-                        <p class="galleryText_size border">Первое</p>
+                        <p class="galleryText_size ">Первое</p>
                     </div>
                 </div>
                 </div>
@@ -148,7 +149,8 @@
                                     placeholder="Comment:">
                             </div>
                         </form>
-                        <button type="submit" class="comments__button button__shine button_fontsize">Add comment</button>
+                        <button type="submit" class="comments__button button__shine button_fontsize">Add
+                            comment</button>
                     </div>
                     <div class="comments__result">
                         <div class="comments__result-item">
@@ -271,7 +273,7 @@
         </div>
     </div>
 
-  
+
     <div class="registrationForm">
         <div class="registration_template">
             <div class="registration_template_pic">
@@ -285,27 +287,27 @@
 
                 <div class="loginBlock">
                     <label for="userLogin" class="loginLabel">Login</label>
-                    <input type="text" id="userLogin" class="login" required pattern="[a-zA-Z0-9]+$"/>
+                    <input type="text" id="userLogin" class="login" required pattern="[a-zA-Z0-9]+$" />
                 </div>
 
                 <div class="emailBlock">
                     <label for="userEmail" class="emailLabel">Email</label>
-                    <input type="email" id="userEmail" class="email" required/>
+                    <input type="email" id="userEmail" class="email" required />
                 </div>
 
                 <div class="passwordBlock">
                     <label for="userPassword" class="passwordLabel">Password</label>
-                    <input type="text" id="userPassword" class="password" required/>
+                    <input type="text" id="userPassword" class="password" required />
                 </div>
 
                 <div class="passwordBlock">
                     <label for="userPassword" class="passwordLabel">Repeat password</label>
-                    <input type="text" id="userPassword" class="password" required/>
+                    <input type="text" id="userPassword" class="password" required />
                 </div>
 
                 <div class="heroBlock">
                     <label for="selectHero" class="heroLabel">Your Hero</label>
-                    <input type="text" id="selectHero" class="selectHero" placeholder="Sirius Black" required/>
+                    <input type="text" id="selectHero" class="selectHero" placeholder="Sirius Black" required />
                 </div>
 
                 <div class="checkboxBlock checkLogin">
@@ -325,6 +327,8 @@
     <script src="./assets/scripts/search.js"></script>
     <script src="./assets/scripts/comments.js"></script>
     <script src="./assets/scripts/slaiderSpells.js"></script>
+    <script src="./assets/scripts/spells.js"></script>
+
 </body>
 
 </html>
