--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                     <div class="mainpage__container__search">
                         <input type="text" class="mainpage__container__input" placeholder="Name of character" id="hero">
                     </div>
-                    <button class="mainpage__container__button button_fontsize button__shine"
-                        onclick="heroSearch()">Search</button>
+                    <button class="mainpage__container__button button_fontsize button__shine">Search</button>
                 </div>
                 <p class="mainpage__container__text3">P.S Please enter the character's First and Last Name!</p>
 
