окна вход и регистрация

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         rel="stylesheet">
     <script src="./assets/scripts/modal.js"></script>
     <script src="./assets/scripts/modal2.js"></script>
+    <script src="./assets/scripts/modalvhod.js"></script>
+    <script src="./assets/scripts/modalReg.js"></script>
     <title>Document</title>
 
 </head>
@@ -33,7 +35,7 @@
                 </ul>
             </nav>
             <div class="header__login">
-                <a href="#">SIGN IN</a>
+                <a href="#" id="signIn">SIGN IN</a>
             </div>
         </div>
     </header>
@@ -279,6 +281,8 @@
     <script src="./assets/scripts/spells.js"></script>
     <script src="./assets/scripts/validationReg.js"></script>
     <script src="./assets/scripts/scroll.js"></script>
+    <script src="./assets/scripts/vhod.js"></script> 
+    <script src="./assets/scripts/registration.js"></script>
 
 
 </html>
