--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="./assets/scripts/modal.js"></script>
     <script src="./assets/scripts/modal2.js"></script>
     <title>Document</title>
@@ -41,17 +39,14 @@
     <main class="main">
         <article class="mainpage" id="mainpage">
             <div class="mainpage__container">
-                <div class="mainpage__container__logodiv"><img class="mainpage__container__logo"
-                        src="./assets/images/mainpage/logo.png" alt="логотип"></div>
+                <div class="mainpage__container__logodiv"><img class="mainpage__container__logo" src="./assets/images/mainpage/logo.png" alt="логотип"></div>
                 <p class="mainpage__container__text1">Hello! You got into Harry Potter Wiki!</p>
-                <p class="mainpage__container__text2">Here you can find information about your favorite heroes and
-                    spells of the Harry Potter universe</p>
+                <p class="mainpage__container__text2">Here you can find information about your favorite heroes and spells of the Harry Potter universe</p>
                 <div class="mainpage__container2">
                     <div class="mainpage__container__search">
                         <input type="text" class="mainpage__container__input" placeholder="Name of character" id="hero">
                     </div>
-                    <button class="mainpage__container__button button_fontsize button__shine"
-                        onclick="heroSearch()">Search</button>
+                    <button class="mainpage__container__button button_fontsize button__shine" onclick="heroSearch()">Search</button>
                 </div>
                 <p class="mainpage__container__text3">P.S Please enter the character's First and Last Name!</p>
 
@@ -61,33 +56,25 @@
         <div class="wrapper heroesBox" id="heroes">
             <h2 class="title_size padding">MAIN HEROES</h2>
             <div class="slider">
-                <div class="slider__item harry" data-tooltip="Harry Potter"><img
-                        src="./assets/images/mainpage/HarryPotter.png" class="imgHover" alt="Harry">
+                <div class="slider__item harry" data-tooltip="Harry Potter"><img src="./assets/images/mainpage/HarryPotter.png" class="imgHover" alt="Harry">
                 </div>
-                <div class="slider__item lord" data-tooltip="Lord Voldemort"><img
-                        src="./assets/images/mainpage/Voldemort.png" class="imgHover" alt="Lord">
+                <div class="slider__item lord" data-tooltip="Lord Voldemort"><img src="./assets/images/mainpage/Voldemort.png" class="imgHover" alt="Lord">
 
                 </div>
-                <div class="slider__item hermione" data-tooltip="Hermione Granger"><img
-                        src="./assets/images/mainpage/HermioneGranger.png" class="imgHover" alt="Hermione">
+                <div class="slider__item hermione" data-tooltip="Hermione Granger"><img src="./assets/images/mainpage/HermioneGranger.png" class="imgHover" alt="Hermione">
 
                 </div>
-                <div class="slider__item ron" data-tooltip="Ron Weasley"><img
-                        src="./assets/images/mainpage/RonWeasley.png" class="imgHover" alt="Ron">
+                <div class="slider__item ron" data-tooltip="Ron Weasley"><img src="./assets/images/mainpage/RonWeasley.png" class="imgHover" alt="Ron">
 
                 </div>
-                <div class="slider__item albus" data-tooltip="Albus Dumbledore"><img
-                        src="./assets/images/mainpage/AlbusDumbledore.png" class="imgHover" alt="Albus">
+                <div class="slider__item albus" data-tooltip="Albus Dumbledore"><img src="./assets/images/mainpage/AlbusDumbledore.png" class="imgHover" alt="Albus">
                 </div>
 
-                <div class="slider__item rubeus" data-tooltip="Rubeus Hagrid"><img
-                        src="./assets/images/mainpage/RubeusHagrid.png" class="imgHover" alt="Hagrid">
+                <div class="slider__item rubeus" data-tooltip="Rubeus Hagrid"><img src="./assets/images/mainpage/RubeusHagrid.png" class="imgHover" alt="Hagrid">
                 </div>
-                <div class="slider__item snape" data-tooltip="Severus Snape"><img
-                        src="./assets/images/mainpage/SeverusSnape.png" class="imgHover" alt="Snape">
+                <div class="slider__item snape" data-tooltip="Severus Snape"><img src="./assets/images/mainpage/SeverusSnape.png" class="imgHover" alt="Snape">
                 </div>
-                <div class="slider__item draco" data-tooltip="Draco Malfoy"><img
-                        src="./assets/images/mainpage/DracoMalfoy.jpg" class="imgHover" alt="Malfoy">
+                <div class="slider__item draco" data-tooltip="Draco Malfoy"><img src="./assets/images/mainpage/DracoMalfoy.jpg" class="imgHover" alt="Malfoy">
                 </div>
             </div>
         </div>
@@ -139,20 +126,15 @@
                 <h2 class="title_size commentsBox__title">COMMENTS</h2>
                 <div class="comments__block">
                     <div class="comments__form">
-                        <form>
+                        <form class="comments__form-group">
                             <div class="form-group">
-                                <input type="name" class="form-control form-name" id="comment-name"
-                                    placeholder="Your name:">
+                                <input type="name" class="form-control form-name" id="comment-name" placeholder="Your name:" required>
                             </div>
                             <div class="form-group">
-                                <input type="name" class="form-control form-comment" id="comment-body"
-                                    placeholder="Comment:">
+                                <input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:" required>
                             </div>
+                            <button type="submit" class="comments__button button__shine button_fontsize" id="comment-add">Add comment</button>
                         </form>
-
-
-                        <button type="submit" class="comments__button button__shine button_fontsize"
-                            id="comment-add">Add comment</button>
 
                     </div>
                     <div class="comments__result">
@@ -238,8 +220,7 @@
 
                 <div class="loginBlock">
                     <label for="userLogin" class="loginLabel">Login</label>
-                    <input type="text" id="userLogin" class="login form__item" required pattern="[a-zA-Z0-9]+$"
-                        minlength="5" />
+                    <input type="text" id="userLogin" class="login form__item" required pattern="[a-zA-Z0-9]+$" minlength="5" />
                 </div>
                 <div class="emailBlock">
                     <label for="userEmail" class="emailLabel" pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$">Email</label>
@@ -255,8 +236,7 @@
                 </div>
                 <div class="heroBlock">
                     <label for="selectHero" class="heroLabel">Your Hero</label>
-                    <input type="text" id="selectHero" class="selectHero form__item" placeholder="Sirius Black"
-                        required />
+                    <input type="text" id="selectHero" class="selectHero form__item" placeholder="Sirius Black" required />
                 </div>
                 <div class="checkboxBlock checkLogin">
                     <label class="rememberText"><input type="checkbox" name="remember" value="1">Remember me</label>
@@ -272,8 +252,7 @@
 
     <script src="./assets/jquery-3.6.3.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
-    <script type="text/javascript" src="js/jquery.validate.min.js">
-    </script>
+    <script type="text/javascript" src="js/jquery.validate.min.js"></script>
     <script src="./assets/scripts/index.js"></script>
     <script src="./assets/scripts/search.js"></script>
     <script src="./assets/scripts/comments.js"></script>
