--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="./assets/scripts/modal.js"></script>
     <script src="./assets/scripts/modal2.js"></script>
-    <script src="./assets/scripts/modalvhod.js"></script>
     <script src="./assets/scripts/modalReg.js"></script>
     <title>Document</title>
 
@@ -33,7 +32,7 @@
                 </ul>
             </nav>
             <div class="header__login">
-                <a href="#" id="signIn">SIGN IN</a>
+                <a href="#" id="signUp">SIGN UP</a>
             </div>
         </div>
     </header>
@@ -263,7 +262,6 @@
     <script src="./assets/scripts/spells.js"></script>
     <script src="./assets/scripts/validationReg.js"></script>
     <script src="./assets/scripts/scroll.js"></script>
-    <script src="./assets/scripts/vhod.js"></script>
     <script src="./assets/scripts/registration.js"></script>
 
 
