--- a/index.html
+++ b/index.html
@@ -129,19 +129,13 @@
                 <div class="comments__block">
                     <div class="comments__form">
                         <form class="comments__form-group">
-                            <div class="form-group">
-                                <input type="name" class="form-control form-name" id="comment-name" placeholder="Your name:" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:" required>
-                            </div>
+                            <div class="form-group"><input type="name" class="form-control form-name" id="comment-name" placeholder="Your name:" required></div>
+                            <div class="form-group"><input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:" required></div>
                             <button type="submit" class="comments__button button__shine button_fontsize" id="comment-add">Add comment</button>
                         </form>
-
                     </div>
                     <div class="comments__result">
-                        <div class="comments__result-item" id="comment-field">
-                        </div>
+                        <div class="comments__result-item" id="comment-field"></div>
                     </div>
                 </div>
             </div>
