аватарка вместо выбора героя

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <input type="text" id="userPassword2" class="password form__item" required />
                     </div>
                     <div class="heroBlock">
-                        <label for="selectHero" class="heroLabel">Your Hero</label>
-                        <input type="text" id="selectHero" class="selectHero form__item" placeholder="Sirius Black" required />
+                        <label for="selectHero" class="heroLabel">Avatar</label>
+                        <input type="text" id="selectHero" class="selectHero form__item" placeholder="link to the picture" required />
                     </div>
                     <div class="checkboxBlock checkLogin">
                         <label class="rememberText"><input type="checkbox" name="remember" value="1">Remember me</label>
